# tuia

./: .gitignore  CMakeLists.txt  Makefile  readme.md
docs/: examples.md  interface.md  readme.md
docs/classes/: tuia.md
samples/: ascii_painter.cpp  change_screens.cpp  draw_colors.cpp  moved_point.cpp  text_image.cpp
source/: background_color.cpp  background_color.hpp  color.cpp  color.hpp  color_type.hpp  foreground_color.cpp  foreground_color.hpp  image.cpp  image.hpp  point.cpp  point.hpp  terminal_color.cpp  terminal_color.hpp  text_image.cpp  text_image.hpp  tuia.cpp  tuia.hpp
tests/: change_screens.cpp  draw.cpp  draw_colors.cpp  moved_point.cpp  screen.cpp  testcolor.cpp  testframework.hpp  testtuia.cpp  text_image.cpp  ui.cpp
